--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -525,4 +525,8 @@
   <data name="SelectAllCommandKey" xml:space="preserve">
     <value>Select all text</value>
   </data>
+  <data name="MarkModeCommandKey" xml:space="preserve">
+    <value>Toggle mark mode</value>
+    <comment>A command that will toggle "mark mode". This is a mode in the application where the user can mark the text by selecting portions of the text.</comment>
+  </data>
 </root>
