--- a/src/cascadia/TerminalApp/Resources/en-US/ContextMenu.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/ContextMenu.resw
@@ -158,15 +158,15 @@
     <value>Windows Terminal with a preview of upcoming features</value>
   </data>
   <data name="ShellExtension_OpenInTerminalMenuItem_Dev" xml:space="preserve">
-    <value>Open in Terminal (Dev)</value>
+    <value>Open in Terminal (&amp;Dev)</value>
     <comment>{Locked} The dev build will never be seen in multiple languages</comment>
   </data>
   <data name="ShellExtension_OpenInTerminalMenuItem_Preview" xml:space="preserve">
-    <value>Open in Terminal Preview</value>
-    <comment>This is a menu item that will be displayed in the Windows File Explorer that launches the Preview version of Windows Terminal</comment>
+    <value>Open in Terminal &amp;Preview</value>
+    <comment>This is a menu item that will be displayed in the Windows File Explorer that launches the Preview version of Windows Terminal. Please mark one of the characters to be an accelerator key.</comment>
   </data>
   <data name="ShellExtension_OpenInTerminalMenuItem" xml:space="preserve">
-    <value>Open in Terminal</value>
-    <comment>This is a menu item that will be displayed in the Windows File Explorer that launches the non-preview version of Windows Terminal</comment>
+    <value>Open in &amp;Terminal</value>
+    <comment>This is a menu item that will be displayed in the Windows File Explorer that launches the non-preview version of Windows Terminal. Please mark one of the characters to be an accelerator key.</comment>
   </data>
 </root>
