Upgrade check-spelling to v0.0.20 (#13565)
Upgrade check-spelling to [v0.0.20](https://github.com/check-spelling/check-spelling/releases/tag/v0.0.20)

This upgrade includes a refresh of the workflow

key new features:
* the previous comment is collapsed
* duplicate words are flagged (see `alone` and `the`)
* forbidding patterns (see `nonexistent`, `preexisting`, and `greater than`)

Each of these features can be tuned
- comment collapsing is controlled by the `followup` bits in the workflow--  but I can't imagine why one would want to turn it off
- duplicate words can be masked in `patterns.txt` (see `Guid` and `that`)
- forbidding patterns (especially duplicates) is in `.github/actions/spelling/line_forbidden.patterns`

Fwiw, I'm slowly moving towards not using `.txt` in filenames, but it's a long term project and I have a bunch of other goals for the near term.

The refresh of advice is of course flexible -- I'm still evolving my default text. Note that the default now includes some `curl` and I'm still working on how I want to consume the output. I'm getting close to the point where I might be able to provide a tool that could reliably consume the output (including on Windows).

This code has been used internally for a while, but I tested it for this repository here:
https://github.com/check-spelling/terminal/pull/2

--- a/doc/specs/drafts/#3327 - Application Theming/#10509 - Mica.md
+++ b/doc/specs/drafts/#3327 - Application Theming/#10509 - Mica.md
@@ -153,7 +153,7 @@ layer, instead of transparent through the whole window.
   **However**, that does leave us in the world where we're rolling our own
   custom Mica brush, and would need to keep it up to date with the OS
   implementation. We'd be firmly off the rails of the recommended Mica usage,
-  and our support would be likely very minimal. This is reason alone alone to
+  and our support would be likely very minimal. This is reason alone to
   avoid this path, and instead push for a platform-supported solution.
 
   **TODO!**: We should make sure to have a Future Considerations section on how
