Rename newTabPosition values (#13602)
Renames `newTabPosition` strings and enums.
Also fixes the schema, noted in https://github.com/microsoft/terminal/pull/13469#discussion_r928138496

Closes #13597

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -236,20 +236,20 @@
     <comment>A description for what the "always show tabs" setting does. Presented near "Globals_AlwaysShowTabs.Header".</comment>
   </data>
   <data name="Globals_NewTabPosition.Header" xml:space="preserve">
-    <value>Position of the new tab</value>
-    <comment>Header for a control to select position of new tab.</comment>
+    <value>Position of newly created tabs</value>
+    <comment>Header for a control to select position of newly created tabs.</comment>
   </data>
   <data name="Globals_NewTabPosition.HelpText" xml:space="preserve">
-    <value>Specifies position of the new tab</value>
-    <comment>A description for what the "Position of the new tab" setting does.</comment>
+    <value>Specifies where new tabs appear in the tab row</value>
+    <comment>A description for what the "Position of newly created tabs" setting does.</comment>
   </data>
-  <data name="Globals_NewTabPositionAtTheEnd.Content" xml:space="preserve">
-    <value>At the end</value>
-    <comment>An option to choose from for the "Position of the new tab" setting. When selected new tab appears at the end.</comment>
+  <data name="Globals_NewTabPositionAfterLastTab.Content" xml:space="preserve">
+    <value>After the last tab</value>
+    <comment>An option to choose from for the "Position of newly created tabs" setting. When selected new tab appears after the last tab.</comment>
   </data>
   <data name="Globals_NewTabPositionAfterCurrentTab.Content" xml:space="preserve">
-    <value>After current tab</value>
-    <comment>An option to choose from for the "Position of the new tab" setting. When selected new tab appears after currently selected tab.</comment>
+    <value>After the current tab</value>
+    <comment>An option to choose from for the "Position of newly created tabs" setting. When selected new tab appears after the current tab.</comment>
   </data>
   <data name="Globals_CopyOnSelect.Header" xml:space="preserve">
     <value>Automatically copy selection to clipboard</value>
